--- a/dotfiles/dot_config/waybar/themes/exotic-modern/style.css
+++ b/dotfiles/dot_config/waybar/themes/exotic-modern/style.css
@@ -8,7 +8,15 @@
  *  
  * ----------------------------------------------------- 
 */
-@import '../../../../.cache/wal/colors-waybar.css';
+
+/* -----------------------------------------------------
+ * Import Pywal colors 
+ * ----------------------------------------------------- */
+/* @import 'style-light.css'; */
+
+/* -----------------------------------------------------
+ * General 
+ * ----------------------------------------------------- */
 
  * {
     font-family: "Fira Sans Semibold", "Font Awesome 6 Free", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
@@ -17,15 +25,13 @@
 }
 
 window#waybar {
-    background-color: rgba(0,0,0,0.2);
+    background-color: rgba(0,0,0,0.7);
     border-bottom: 0px solid #ffffff;
     /* color: #FFFFFF; */
+    /*background: transparent;*/
     transition-property: background-color;
     transition-duration: .5s;
-}
 
-.modules-left {
-    padding-left:14px;
 }
 
 /* -----------------------------------------------------
@@ -34,9 +40,9 @@ window#waybar {
 
 #workspaces {
     background: @workspacesbackground1;
-    margin: 5px 1px 6px 1px;
-    padding: 0px 1px;
-    border-radius: 15px;
+    margin: 2px 18px 3px 1px;
+    padding: 0px 2px;
+    border-radius: 5px 5px 5px 5px;
     border: 0px;
     font-weight: bold;
     font-style: normal;
@@ -46,29 +52,29 @@ window#waybar {
 }
 
 #workspaces button {
-    padding: 0px 5px;
-    margin: 4px 3px;
-    border-radius: 15px;
+    padding: 0px 6px;
+    margin: 3px 2px;
+    border-radius: 3px 3px 3px 3px;
     border: 0px;
     color: @textcolor1;
     background-color: @workspacesbackground2;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.1s linear;
     opacity: 0.4;
 }
 
 #workspaces button.active {
     color: @textcolor1;
     background: @workspacesbackground2;
-    border-radius: 15px;
-    min-width: 40px;
-    transition: all 0.3s ease-in-out;
+    border-radius: 3px 3px 3px 3px;
+    min-width: 30px;
+    transition: all 0.1s linear;
     opacity:1.0;
 }
 
 #workspaces button:hover {
     color: @textcolor1;
     background: @workspacesbackground2;
-    border-radius: 15px;
+    border-radius: 5px 5px 5px 5px;
     opacity:0.7;
 }
 
@@ -77,9 +83,9 @@ window#waybar {
  * ----------------------------------------------------- */
 
 tooltip {
-    border-radius: 10px;
+    border-radius: 16px;
     background-color: @backgroundlight;
-    opacity:0.8;
+    opacity:0.9;
     padding:20px;
     margin:0px;
 }
@@ -93,11 +99,10 @@ tooltip label {
  * ----------------------------------------------------- */
 
 #window {
-    background: @backgroundlight;
-    margin: 8px 15px 8px 0px;
+    margin: 3px 15px 3px 0px;
     padding: 2px 10px 0px 10px;
-    border-radius: 12px;
-    color:@textcolor2;
+    border-radius: 5px 5px 5px 5px;
+    color:white;
     font-size:16px;
     font-weight:normal;
     opacity:0.8;
@@ -113,9 +118,9 @@ window#waybar.empty #window {
 
 #taskbar {
     background: @backgroundlight;
-    margin: 6px 15px 6px 0px;
+    margin: 3px 15px 3px 0px;
     padding:0px;
-    border-radius: 15px;
+    border-radius: 5px 5px 5px 5px;
     font-weight: normal;
     font-style: normal;
     opacity:0.8;
@@ -124,7 +129,7 @@ window#waybar.empty #window {
 
 #taskbar button {
     margin:0;
-    border-radius: 15px;
+    border-radius: 5px 5px 5px 5px;
     padding: 0px 5px 0px 5px;
 }
 
@@ -161,8 +166,8 @@ window#waybar.empty #window {
 #custom-calculator, 
 #custom-windowsvm, 
 #custom-cliphist, 
-#custom-wallpaper, 
 #custom-settings, 
+#custom-wallpaper, 
 #custom-system,
 #custom-hyprshade,
 #custom-hypridle,
@@ -178,7 +183,7 @@ window#waybar.empty #window {
 #custom-quicklink9,
 #custom-quicklink10,
 #custom-waybarthemes {
-    margin-right: 14px;
+    margin-right: 16px;
     font-size: 20px;
     font-weight: bold;
     opacity: 0.8;
@@ -195,11 +200,7 @@ window#waybar.empty #window {
 #custom-quicklink8,
 #custom-quicklink9,
 #custom-quicklink10 {
-    margin-right: 20px;   
-}
-
-#custom-settings {
-    margin-right:12px;
+    margin-right: 24px;   
 }
 
 #custom-tools {
@@ -216,21 +217,20 @@ window#waybar.empty #window {
 
 #custom-ml4w-welcome {
     margin-right: 12px;
-    background-image: url("assets/ml4w-icon.svg");
+    background-image: url("../assets/ml4w-icon.svg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain; 
     padding-right: 20px;
-    opacity: 0.8;
 }
 
 #custom-chatgpt {
-    margin-right: 12px;
-    background-image: url("assets/openai.svg");
+    margin-right: 16px;
+    background-image: url("../assets/openai.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain; 
-    padding-right: 16px;
+    padding-right: 18px;
     opacity: 0.8;
 }
 
@@ -239,8 +239,8 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #idle_inhibitor {
-    margin-right: 17px;
-    font-size: 20px;
+    margin-right: 15px;
+    font-size: 22px;
     font-weight: bold;
     opacity: 0.8;
     color: @iconcolor;
@@ -262,9 +262,9 @@ window#waybar.empty #window {
     background-color: @backgrounddark;
     font-size: 16px;
     color: @textcolor1;
-    border-radius: 15px;
+    border-radius: 5px 5px 5px 5px;
     padding: 0px 10px 0px 10px;
-    margin: 8px 16px 8px 0px;
+    margin: 2px 17px 2px 0px;
     opacity:0.8;
     border:3px solid @bordercolor;
 }
@@ -289,9 +289,9 @@ window#waybar.empty #window {
     background-color: @backgroundlight;
     font-size: 16px;
     color: @textcolor2;
-    border-radius: 15px;
+    border-radius: 5px 5px 5px 5px;
     padding: 2px 10px 0px 10px;
-    margin: 8px 15px 8px 0px;
+    margin: 3px 15px 3px 0px;
     opacity:0.8;
 }
 
@@ -313,7 +313,7 @@ window#waybar.empty #window {
  * Hardware Group
  * ----------------------------------------------------- */
 
- #disk,#memory,#cpu,#language {
+#disk,#memory,#cpu,#language {
     margin:0px;
     padding:0px;
     font-size:16px;
@@ -332,9 +332,9 @@ window#waybar.empty #window {
     background-color: @backgrounddark;
     font-size: 16px;
     color: @textcolor1;
-    border-radius: 15px;
+    border-radius: 3px 5px 3px 5px;
     padding: 1px 10px 0px 10px;
-    margin: 8px 15px 8px 0px;
+    margin: 3px 0px 3px 0px;
     opacity:0.8;
     border:3px solid @bordercolor;   
 }
@@ -343,13 +343,13 @@ window#waybar.empty #window {
  * Backlight
  * ----------------------------------------------------- */
 
- #backlight {
+#backlight {
     background-color: @backgroundlight;
     font-size: 16px;
     color: @textcolor2;
-    border-radius: 15px;
+    border-radius: 5px 5px 5px 5px;
     padding: 2px 10px 0px 10px;
-    margin: 8px 15px 8px 0px;
+    margin: 3px 15px 3px 0px;
     opacity:0.8;
 }
 
@@ -361,9 +361,9 @@ window#waybar.empty #window {
     background-color: @backgroundlight;
     font-size: 16px;
     color: @textcolor2;
-    border-radius: 15px;
+    border-radius: 5px 5px 5px 5px;
     padding: 2px 10px 0px 10px;
-    margin: 8px 15px 8px 0px;
+    margin: 3px 15px 3px 0px;
     opacity:0.8;
 }
 
@@ -380,9 +380,9 @@ window#waybar.empty #window {
     background-color: @backgroundlight;
     font-size: 16px;
     color: @textcolor2;
-    border-radius: 15px;
+    border-radius: 5px 5px 5px 5px;
     padding: 2px 10px 0px 10px;
-    margin: 8px 15px 8px 0px;
+    margin: 3px 15px 3px 0px;
     opacity:0.8;
 }
 
@@ -400,13 +400,13 @@ window#waybar.empty #window {
  * Bluetooth
  * ----------------------------------------------------- */
 
- #bluetooth, #bluetooth.on, #bluetooth.connected {
+#bluetooth, #bluetooth.on, #bluetooth.connected {
     background-color: @backgroundlight;
     font-size: 16px;
     color: @textcolor2;
-    border-radius: 15px;
+    border-radius: 5px 5px 5px 5px;
     padding: 2px 10px 0px 10px;
-    margin: 8px 15px 8px 0px;
+    margin: 3px 15px 3px 0px;
     opacity:0.8;
 }
 
@@ -424,9 +424,9 @@ window#waybar.empty #window {
     background-color: @backgroundlight;
     font-size: 16px;
     color: @textcolor2;
-    border-radius: 15px;
+    border-radius: 5px 5px 5px 5px;
     padding: 2px 15px 0px 10px;
-    margin: 8px 15px 8px 0px;
+    margin: 3px 15px 3px 0px;
     opacity:0.8;
 }
 
@@ -458,7 +458,6 @@ window#waybar.empty #window {
 
 #tray {
     padding: 0px 15px 0px 0px;
-    color: @textcolor3;
 }
 
 #tray > .passive {
@@ -469,25 +468,4 @@ window#waybar.empty #window {
     -gtk-icon-effect: highlight;
 }
 
- @define-color backgroundlight #FFFFFF;
- @define-color backgrounddark #FFFFFF;
- @define-color workspacesbackground1 #FFFFFF;
- @define-color workspacesbackground2 #CCCCCC;
- @define-color bordercolor #FFFFFF;
- @define-color textcolor1 #000000;
- @define-color textcolor2 #000000;
- @define-color textcolor3 #000000;
- @define-color iconcolor #FFFFFF;
- 
- window#waybar {
-     background-color: rgba(0, 0, 0, 0.75);
- }
- 
- #custom-ml4w-welcome {
-     background-image: url("../assets/ml4w-icon-white.svg");
- }
- 
- #custom-chatgpt {
-     background-image: url("../assets/openai-white.svg");
- }
- 
+
