--- a/dotfiles/.config/waybar/themes/exotic-modern/style.css
+++ b/dotfiles/.config/waybar/themes/exotic-modern/style.css
@@ -25,7 +25,7 @@
 }
 
 window#waybar {
-    background-color: rgba(255,255,255,0);
+    background-color: transparent;
     border-bottom: 0px solid #ffffff;
     /* color: #FFFFFF; */
     transition-property: background-color;
