--- a/dotfiles/.config/waybar/themes/exotic-modern-simple/black/style.css
+++ b/dotfiles/.config/waybar/themes/exotic-modern-simple/black/style.css
@@ -8,17 +8,23 @@
  @define-color workspacesbackground1 #000000;
  @define-color workspacesbackground2 #222222;
  @define-color bordercolor #000000;
- @define-color textcolor1 #FFFFFF;
- @define-color textcolor2 #FFFFFF;
- @define-color textcolor3 #000000;
- @define-color iconcolor #000000;
+ /* @define-color textcolor1 #FFFFFF; */
+ /* @define-color textcolor2 #FFFFFF; */
+ /* @define-color textcolor3 #FFFFFF; */
+ /* @define-color iconcolor #FFFFFF; */
+
+/* @define-color textcolor1 #B6FFA1; */
+@define-color textcolor1 #84FF1D;
+@define-color textcolor2 @textcolor1;
+@define-color textcolor3 @textcolor1;
+@define-color iconcolor @textcolor1;
  
  @import '../style.css';
  
 #custom-ml4w-welcome {
-    background-image: url("../../assets/ml4w-icon-black.svg");
+    background-image: url("../../assets/ml4w-icon-white.svg");
 }
 
 #custom-chatgpt {
-    background-image: url("../../assets/openai-black.svg");
+    background-image: url("../../assets/openai-white.svg");
 }
