--- a/dotfiles/.config/waybar/themes/exotic-modern-simple/light/style.css
+++ b/dotfiles/.config/waybar/themes/exotic-modern-simple/light/style.css
@@ -1,16 +1,21 @@
 /* -----------------------------------------------------
  * Import Pywal colors 
  * ----------------------------------------------------- */
-@import '../../../../../.cache/wal/colors-waybar.css';
+ @import '../../../../../.cache/wal/colors-waybar.css';
 
-@define-color backgroundlight #FFFFFF;
-@define-color backgrounddark @color11;
-@define-color workspacesbackground1 #FFFFFF;
-@define-color workspacesbackground2 @color11;
-@define-color bordercolor #FFFFFF;
-@define-color textcolor1 #FFFFFF;
-@define-color textcolor2 @color11;
-@define-color textcolor3 #FFFFFF;
-@define-color iconcolor #FFFFFF;
+ @define-color backgroundcolor #ffffff;
+ @define-color workspacesbackground @backgroundcolor;
+ @define-color bordercolor @backgroundcolor;
 
-@import '../style.css';
+@define-color textcolor #000000;
+@define-color iconcolor @textcolor;
+ 
+ @import '../style.css';
+ 
+#custom-ml4w-welcome {
+    background-image: url("../../assets/ml4w-icon-white.svg");
+}
+
+#custom-chatgpt {
+    background-image: url("../../assets/openai-white.svg");
+}
