--- a/dotfiles/.config/waybar/themes/exotic-modern-simple/style.css
+++ b/dotfiles/.config/waybar/themes/exotic-modern-simple/style.css
@@ -1,4 +1,4 @@
-/*
+    /*
  * __        __          _                  ____  _         _       
  * \ \      / /_ _ _   _| |__   __ _ _ __  / ___|| |_ _   _| | ___  
  *  \ \ /\ / / _` | | | | '_ \ / _` | '__| \___ \| __| | | | |/ _ \ 
@@ -26,10 +26,9 @@
 
 window#waybar {
     /*background-color: transparent;*/
-    background-color: black;
+    background-color: @backgroundcolor;
 
     border-bottom: 0px solid #ffffff;
-    /* color: #FFFFFF; */
     transition-property: background-color;
     transition-duration: .5s;
 }
@@ -39,29 +38,29 @@ window#waybar {
  * ----------------------------------------------------- */
 
 #workspaces {
-    background: @workspacesbackground1;
+    background: @workspacesbackground;
     border-radius: 5px 5px 5px 5px;
     border: 0px;
     font-weight: bold;
     font-style: normal;
     opacity: 0.8;
     font-size: 16px;
-    color: @textcolor1;
+    color: @textcolor;
     margin: 0px 15px 0px 0px;
 }
 
 #workspaces button {
     border-radius: 3px 3px 3px 3px;
     border: 0px;
-    color: @textcolor1;
-    /*background-color: @workspacesbackground2;*/
+    color: @textcolor;
+    /*background-color: @workspacesbackground;*/
     transition: all 0.1s linear;
     opacity: 0.4;
 }
 
 #workspaces button.active {
-    color: @textcolor1;
-    /*background: @workspacesbackground2;*/
+    color: @textcolor;
+    /*background: @workspacesbackground;*/
     border-radius: 3px 3px 3px 3px;
     min-width: 30px;
     transition: all 0.1s linear;
@@ -69,8 +68,8 @@ window#waybar {
 }
 
 #workspaces button:hover {
-    color: @textcolor1;
-    background: @workspacesbackground2;
+    color: @textcolor;
+    background: @workspacesbackground;
     border-radius: 5px 5px 5px 5px;
     opacity:0.7;
 }
@@ -81,12 +80,12 @@ window#waybar {
 
 tooltip {
     border-radius: 16px;
-    background-color: @backgroundlight;
+    background-color: @backgroundcolor;
     opacity:0.9;
 }
 
 tooltip label {
-    color: @textcolor2;
+    color: @textcolor;
 }
 
 /* -----------------------------------------------------
@@ -95,7 +94,7 @@ tooltip label {
 
 #window {
     border-radius: 5px 5px 5px 5px;
-    color: @textcolor1;
+    color: @textcolor;
     font-size:16px;
     font-weight:normal;
     opacity:0.8;
@@ -111,12 +110,12 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #taskbar {
-    background: @backgroundlight;
+    background: @backgroundcolor;
     border-radius: 5px 5px 5px 5px;
     font-weight: normal;
     font-style: normal;
     opacity:0.8;
-    border: 3px solid @backgroundlight;
+    border: 3px solid @backgroundcolor;
 }
 
 #taskbar button {
@@ -244,9 +243,9 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #custom-appmenu {
-    background-color: @backgrounddark;
+    background-color: @backgroundcolor;
     font-size: 16px;
-    color: @textcolor1;
+    color: @textcolor;
     border-radius: 5px 5px 5px 5px;
     padding: 0px 10px 0px 10px;
     margin: 2px 10px 2px 10px;
@@ -271,15 +270,15 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #custom-updates {
-    background-color: @backgroundlight;
+    background-color: @backgroundcolor;
     font-size: 16px;
-    color: @textcolor2;
+    color: @textcolor;
     border-radius: 5px 5px 5px 5px;
     opacity:0.8;
 }
 
 #custom-updates.green {
-    background-color: @backgroundlight;
+    background-color: @textcolor;
 }
 
 #custom-updates.yellow {
@@ -312,9 +311,9 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #clock {
-    background-color: @backgrounddark;
+    background-color: @backgroundcolor;
     font-size: 16px;
-    color: @textcolor1;
+    color: @textcolor;
     border-radius: 3px 5px 3px 5px;
     margin: 0px 25px 0px 0px;
     opacity:0.8;
@@ -326,9 +325,9 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #backlight {
-    background-color: @backgroundlight;
+    background-color: @backgroundcolor;
     font-size: 16px;
-    color: @textcolor2;
+    color: @textcolor;
     border-radius: 5px 5px 5px 5px;
     /* padding: 2px 10px 0px 10px;
     margin: 3px 15px 3px 0px; */
@@ -341,9 +340,9 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #pulseaudio {
-    background-color: @backgroundlight;
+    background-color: @backgroundcolor;
     font-size: 16px;
-    color: @textcolor2;
+    color: @textcolor;
     border-radius: 5px 5px 5px 5px;
     /* padding: 2px 10px 0px 10px;
     margin: 3px 15px 3px 0px; */
@@ -352,8 +351,8 @@ window#waybar.empty #window {
 }
 
 #pulseaudio.muted {
-    background-color: @backgrounddark;
-    color: @textcolor1;
+    background-color: @backgroundcolor;
+    color: @textcolor;
 }
 
 /* -----------------------------------------------------
@@ -361,9 +360,9 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #network {
-    background-color: @backgroundlight;
+    background-color: @backgroundcolor;
     font-size: 16px;
-    color: @textcolor2;
+    color: @textcolor;
     border-radius: 5px 5px 5px 5px;
 	/* padding: 2px 10px 0px 10px;
     margin: 3px 10px 3px 0px; */
@@ -372,13 +371,13 @@ window#waybar.empty #window {
 }
 
 #network.ethernet {
-    background-color: @backgroundlight;
-    color: @textcolor2;
+    background-color: @backgroundcolor;
+    color: @textcolor;
 }
 
 #network.wifi {
-    background-color: @backgroundlight;
-    color: @textcolor2;
+    background-color: @backgroundcolor;
+    color: @textcolor;
 }
 
 /* -----------------------------------------------------
@@ -386,9 +385,9 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #bluetooth, #bluetooth.on, #bluetooth.connected {
-    background-color: @backgroundlight;
+    background-color: @backgroundcolor;
     font-size: 16px;
-    color: @textcolor2;
+    color: @textcolor;
     border-radius: 5px 5px 5px 5px;
     padding: 2px 10px 0px 10px;
     margin: 3px 15px 3px 0px;
@@ -406,9 +405,9 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #battery {
-    background-color: @backgroundlight;
+    background-color: @backgroundcolor;
     font-size: 16px;
-    color: @textcolor2;
+    color: @textcolor;
     border-radius: 5px 5px 5px 5px;
     /* padding: 2px 15px 0px 10px; */
     margin: 0px 25px 0px 0px;
@@ -416,20 +415,20 @@ window#waybar.empty #window {
 }
 
 #battery.charging, #battery.plugged {
-    color: @textcolor2;
-    background-color: @backgroundlight;
+    color: @textcolor;
+    background-color: @backgroundcolor;
 }
 
 @keyframes blink {
     to {
-        background-color: @backgroundlight;
-        color: @textcolor2;
+        background-color: @backgroundcolor;
+        color: @textcolor;
     }
 }
 
 #battery.critical:not(.charging) {
     background-color: #f53c3c;
-    color: @textcolor3;
+    color: @textcolor;
     animation-name: blink;
     animation-duration: 0.5s;
     animation-timing-function: linear;
