--- a/dotfiles/.config/waybar/themes/exotic-modern-simple/white/style.css
+++ b/dotfiles/.config/waybar/themes/exotic-modern-simple/white/style.css
@@ -1,19 +1,16 @@
 /* -----------------------------------------------------
  * Import Pywal colors 
  * ----------------------------------------------------- */
-@import '../../../../../.cache/wal/colors-waybar.css';
+ @import '../../../../../.cache/wal/colors-waybar.css';
 
-@define-color backgroundlight #FFFFFF;
-@define-color backgrounddark #FFFFFF;
-@define-color workspacesbackground1 #FFFFFF;
-@define-color workspacesbackground2 #CCCCCC;
-@define-color bordercolor #FFFFFF;
-@define-color textcolor1 #000000;
-@define-color textcolor2 #000000;
-@define-color textcolor3 #000000;
-@define-color iconcolor #FFFFFF;
+ @define-color backgroundcolor #000000;
+ @define-color workspacesbackground @backgroundcolor;
+ @define-color bordercolor @backgroundcolor;
+
+@define-color textcolor #ffffff;
+@define-color iconcolor @textcolor;
  
-@import '../style.css';
+ @import '../style.css';
  
 #custom-ml4w-welcome {
     background-image: url("../../assets/ml4w-icon-white.svg");
