--- a/dotfiles/.config/waybar/themes/exotic-modern-simple/light/style.css
+++ b/dotfiles/.config/waybar/themes/exotic-modern-simple/light/style.css
@@ -13,9 +13,9 @@
  @import '../style.css';
  
 #custom-ml4w-welcome {
-    background-image: url("../../assets/ml4w-icon-white.svg");
+    background-image: url("../../assets/ml4w-icon-black.svg");
 }
 
 #custom-chatgpt {
-    background-image: url("../../assets/openai-white.svg");
+    background-image: url("../../assets/openai-black.svg");
 }
