--- a/dotfiles/.config/waybar/themes/exotic-modern-simple/light/style.css
+++ b/dotfiles/.config/waybar/themes/exotic-modern-simple/light/style.css
@@ -9,7 +9,10 @@
 
 @define-color textcolor #000000;
 @define-color iconcolor @textcolor;
- 
+
+@define-color spotifybackground @backgroundcolor;
+@define-color spotifycolor #1DB954;
+
  @import '../style.css';
  
 #custom-ml4w-welcome {
