--- a/dotfiles/.config/waybar/themes/exotic-modern-simple/white/style.css
+++ b/dotfiles/.config/waybar/themes/exotic-modern-simple/white/style.css
@@ -3,22 +3,22 @@
  * ----------------------------------------------------- */
  @import '../../../../../.cache/wal/colors-waybar.css';
 
- @define-color backgroundcolor #000000;
- @define-color workspacesbackground @backgroundcolor;
- @define-color bordercolor @backgroundcolor;
+@define-color backgroundcolor #ffffff;
+@define-color workspacesbackground @backgroundcolor;
+@define-color bordercolor @backgroundcolor;
 
-@define-color textcolor #ffffff;
+@define-color textcolor #000000;
 @define-color iconcolor @textcolor;
 
 @define-color spotifybackground #1DB954;
 @define-color spotifycolor @backgroundcolor;
 
-@import '../style.css';
+ @import '../style.css';
  
 #custom-ml4w-welcome {
-    background-image: url("../../assets/ml4w-icon-white.svg");
+    background-image: url("../../assets/ml4w-icon-black.svg");
 }
 
 #custom-chatgpt {
-    background-image: url("../../assets/openai-white.svg");
+    background-image: url("../../assets/openai-black.svg");
 }
