--- a/dotfiles/.config/waybar/themes/exotic-modern-simple/style.css
+++ b/dotfiles/.config/waybar/themes/exotic-modern-simple/style.css
@@ -38,37 +38,36 @@ window#waybar {
  * ----------------------------------------------------- */
 
 #workspaces {
-    background: @workspacesbackground;
-    border-radius: 5px 5px 5px 5px;
+    background: @textcolor;
+    border-radius: 10px 10px 10px 10px;
     border: 0px;
     font-weight: bold;
     font-style: normal;
-    opacity: 1.0;
-    font-size: 16px;
-    color: @textcolor;
+    margin: 0px 8px 0px 8px;
+    padding: 0px 0px 0px 0px;
 }
 
 #workspaces button {
-    border-radius: 3px 3px 3px 3px;
+    border-radius: 10px 10px 10px 10px;
     border: 0px;
-    color: @textcolor;
-    /*background-color: @workspacesbackground;*/
+    color: @backgroundcolor;
     transition: all 0.1s linear;
     opacity: 1.0;
+    font-size: 18px;
 }
 
 #workspaces button.active {
-    color: @textcolor;
-    /*background: @workspacesbackground;*/
-    border-radius: 3px 3px 3px 3px;
-    min-width: 30px;
-    transition: all 0.1s linear;
+    border-radius: 10px 10px 10px 10px;
+    border: 0px;
+    color: @backgroundcolor;
+    min-width: 20px;
+    transition: all 0.2s linear;
     opacity:1.0;
 }
 
 #workspaces button:hover {
     color: @textcolor;
-    background: @workspacesbackground;
+    background: @backgroundcolor;
     border-radius: 5px 5px 5px 5px;
     opacity: 1.0;
 }
@@ -155,9 +154,9 @@ window#waybar.empty #window {
 #custom-settings, 
 #custom-wallpaper, 
 #custom-system,
-#custom-hyprshade,
+#custom-shade,
 #custom-hypridle,
-#custom-tools,
+
 #custom-quicklink1,
 #custom-quicklink2,
 #custom-quicklink3,
@@ -188,6 +187,11 @@ window#waybar.empty #window {
 #custom-quicklink10 {
 }
 
+#custom-tools {
+    padding: 0px 8px 0px 4px; 
+    margin: 0px 2px 0px 2px;
+}
+
 #custom-hypridle.active {
     color: @iconcolor;
 }
@@ -197,13 +201,13 @@ window#waybar.empty #window {
 }
 
 #custom-ml4w-welcome {
-	margin-right: 12px;
     background-image: url("../assets/ml4w-icon.svg"), linear-gradient(to right, #6DB3F2, #6DB3F2);
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
     /* background-color: @iconcolor; */
-    padding-right: 20px;
+    padding: 0px 8px 0px 8px; 
+    margin: 0px 0px 0px 0px;
 }
 
 #custom-chatgpt {
@@ -292,15 +296,15 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #disk,#memory,#cpu {
+    padding: 0px 8px 0px 8px; 
     margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 5px;
     font-size:16px;
     color:@iconcolor;
 }
 
 #language {
-    margin: 0px 0px 0px 0px;
-    padding: 0px 15px 0px 0px;
+    padding: 0px 8px 0px 8px; 
+    margin: 0px 2px 0px 2px;
     font-size:20px;
     color:@iconcolor;
 }
@@ -343,9 +347,8 @@ window#waybar.empty #window {
     font-size: 16px;
     color: @textcolor;
     border-radius: 5px 5px 5px 5px;
-    /* padding: 2px 10px 0px 10px;
-    margin: 3px 15px 3px 0px; */
-    margin: 0px 15px 0px 3px;
+    padding: 0px 8px 0px 8px; 
+    margin: 0px 0px 0px 0px;
     opacity: 1.0;
 }
 
@@ -363,9 +366,8 @@ window#waybar.empty #window {
     font-size: 16px;
     color: @textcolor;
     border-radius: 5px 5px 5px 5px;
-	/* padding: 2px 10px 0px 10px;
-    margin: 3px 10px 3px 0px; */
-    margin: 0px 25px 0px 0px;
+	padding: 0px 8px 0px 8px; 
+    margin: 0px 4px 0px 0px;
     opacity: 1.0;
 }
 
@@ -408,8 +410,8 @@ window#waybar.empty #window {
     font-size: 16px;
     color: @textcolor;
     border-radius: 5px 5px 5px 5px;
-    /* padding: 2px 15px 0px 10px; */
-    margin: 0px 15px 0px 0px;
+    padding: 0px 8px 0px 8px; 
+    margin: 0px 0px 0px 0px;
     opacity: 1.0;
 }
 
@@ -440,7 +442,8 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #tray {
-    padding: 0px 15px 0px 0px;
+    padding: 0px 8px 0px 0px; 
+    margin: 0px 0px 0px 0px;
     opacity: 1.0;
 }
 
@@ -453,10 +456,30 @@ window#waybar.empty #window {
 }
 
 .custom-spotify {
-    padding: 0px 10px 0px 10px;
+    padding: 0px 8px 0px 8px;
     margin: 0px 0px 0px 0px;
     background-color: @spotifybackground;
     font-size: 16px;
     color: @spotifycolor;
     opacity: 1.0;
+}
+
+#pulseaudio-slider slider {
+    min-height: 0px;
+    min-width: 0px;
+    opacity: 1.0;
+    background-image: none;
+    border: none;
+    box-shadow: none;
+}
+#pulseaudio-slider trough {
+    min-height: 10px;
+    min-width: 80px;
+    border-radius: 5px;
+    background-color: black;
+}
+#pulseaudio-slider highlight {
+    min-width: 10px;
+    border-radius: 5px;
+    background-color: green;
 }
