--- a/dotfiles/.config/waybar/themes/exotic-modern-simple/green/style.css
+++ b/dotfiles/.config/waybar/themes/exotic-modern-simple/green/style.css
@@ -3,22 +3,22 @@
  * ----------------------------------------------------- */
 @import '../../../../../.cache/wal/colors-waybar.css';
 
-@define-color backgroundcolor #000000;
+@define-color backgroundcolor #1DB954;
 @define-color workspacesbackground @backgroundcolor;
 @define-color bordercolor @backgroundcolor;
 
-@define-color textcolor #ffea00;
+@define-color textcolor black;
 @define-color iconcolor @textcolor;
 
-@define-color spotifybackground @backgroundcolor;
-@define-color spotifycolor #1DB954;
+@define-color spotifybackground @textcolor;
+@define-color spotifycolor @backgroundcolor;
 
 @import '../style.css';
  
 #custom-ml4w-welcome {
-    background-image: url("../../assets/ml4w-icon-white.svg");
+    background-image: url("../../assets/ml4w-icon-black.svg");
 }
 
 #custom-chatgpt {
-    background-image: url("../../assets/openai-white.svg");
+    background-image: url("../../assets/openai-black.svg");
 }
