--- a/dotfiles/.config/waybar/themes/exotic-modern-simple/hacker/style.css
+++ b/dotfiles/.config/waybar/themes/exotic-modern-simple/hacker/style.css
@@ -3,22 +3,23 @@
  * ----------------------------------------------------- */
 @import '../../../../../.cache/wal/colors-waybar.css';
 
-@define-color backgroundcolor #000000;
+@define-color backgroundcolor black;
 @define-color workspacesbackground @backgroundcolor;
 @define-color bordercolor @backgroundcolor;
 
-@define-color textcolor #84FF1D;
+@define-color textcolor #1DB954;
 @define-color iconcolor @textcolor;
 
-@define-color spotifybackground @backgroundcolor;
-@define-color spotifycolor #1DB954;
+@define-color spotifybackground @textcolor;
+@define-color spotifycolor @backgroundcolor;
  
 @import '../style.css';
  
 #custom-ml4w-welcome {
-    background-image: url("../../assets/ml4w-icon-white.svg");
+    background-image: url("../../assets/ml4w-icon-green.svg");
 }
 
 #custom-chatgpt {
     background-image: url("../../assets/openai-white.svg");
 }
+
