--- a/dotfiles/.config/waybar/themes/exotic-modern-simple/style.css
+++ b/dotfiles/.config/waybar/themes/exotic-modern-simple/style.css
@@ -154,7 +154,7 @@ window#waybar.empty #window {
 #custom-settings, 
 #custom-wallpaper, 
 #custom-system,
-#custom-shade,
+#custom-hyprshade,
 #custom-hypridle,
 
 #custom-quicklink1,
@@ -172,6 +172,7 @@ window#waybar.empty #window {
     font-size: 20px;
     font-weight: bold;
     opacity: 1.0;
+    background-color: @backgroundcolor;
     color: @iconcolor;
 }
 
@@ -190,6 +191,7 @@ window#waybar.empty #window {
 #custom-tools {
     padding: 0px 8px 0px 4px; 
     margin: 0px 2px 0px 2px;
+    color: @iconcolor;
 }
 
 #custom-hypridle.active {
@@ -224,7 +226,7 @@ window#waybar.empty #window {
 
 #idle_inhibitor {
     margin-right: 15px;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: bold;
     opacity: 1.0;
     color: @iconcolor;
@@ -244,13 +246,12 @@ window#waybar.empty #window {
 
 #custom-appmenu {
     background-color: @backgroundcolor;
-    font-size: 20px;
+    font-size: 22px;
     color: @textcolor;
     border-radius: 5px 5px 5px 5px;
     padding: 0px 0px 0px 0px;
-    margin: 2px 0px 2px 15px;
+    margin: 0px 3px 0px 15px;
     opacity: 1.0;
-    border:3px solid @bordercolor;
 }
 
 /* -----------------------------------------------------
@@ -258,7 +259,7 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #custom-exit {
-    margin: 0px 15px 0px 0px;
+    margin: 0px 10px 0px 10px;
     padding:0px;
     font-size:20px;
     color: @iconcolor;
@@ -318,7 +319,7 @@ window#waybar.empty #window {
     font-size: 16px;
     color: @textcolor;
     border-radius: 3px 5px 3px 5px;
-    margin: 0px 15px 0px 0px;
+    margin: 0px 5px 0px 0px;
     opacity: 1.0;
     border:3px solid @bordercolor;   
 }
@@ -445,23 +446,31 @@ window#waybar.empty #window {
     padding: 0px 8px 0px 0px; 
     margin: 0px 0px 0px 0px;
     opacity: 1.0;
+    background-color: @backgroundcolor;
+    color: @iconcolor;
 }
 
 #tray > .passive {
     -gtk-icon-effect: dim;
+    background-color: @backgroundcolor;
+    color: @iconcolor;
 }
 
 #tray > .needs-attention {
     -gtk-icon-effect: highlight;
+    background-color: @backgroundcolor;
+    color: @iconcolor;
 }
 
 .custom-spotify {
-    padding: 0px 8px 0px 8px;
+    padding: 0px 12px 0px 12px;
     margin: 0px 0px 0px 0px;
     background-color: @spotifybackground;
     font-size: 16px;
     color: @spotifycolor;
     opacity: 1.0;
+    border-radius: 50px;
+    transition: all 0.3s linear;
 }
 
 #pulseaudio-slider slider {
