--- a/dotfiles/.config/waybar/themes/exotic-modern-simple/style.css
+++ b/dotfiles/.config/waybar/themes/exotic-modern-simple/style.css
@@ -18,6 +18,12 @@
  * General 
  * ----------------------------------------------------- */
 
+@define-color altbackgroundcolor @textcolor;
+@define-color altbordercolor @altbackgroundcolor;
+@define-color alttextcolor @waybarcolor;
+@define-color alticoncolor @alttextcolor;
+ 
+
  * {
     font-family: "Fira Sans Semibold", "Font Awesome 6 Free", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
     border: none;
@@ -26,8 +32,7 @@
 
 window#waybar {
     /*background-color: transparent;*/
-    background-color: @backgroundcolor;
-
+    background-color: @waybarcolor;
     border-bottom: 0px solid #ffffff;
     transition-property: background-color;
     transition-duration: .5s;
@@ -38,7 +43,8 @@ window#waybar {
  * ----------------------------------------------------- */
 
 #workspaces {
-    background: @textcolor;
+    background-color: @altbackgroundcolor;
+    color: @alttextcolor;
     border-radius: 10px 10px 10px 10px;
     border: 0px;
     font-weight: bold;
@@ -50,7 +56,8 @@ window#waybar {
 #workspaces button {
     border-radius: 10px 10px 10px 10px;
     border: 0px;
-    color: @backgroundcolor;
+    background-color: @altbackgroundcolor;
+    color: @alttextcolor;
     transition: all 0.1s linear;
     opacity: 1.0;
     font-size: 18px;
@@ -59,18 +66,17 @@ window#waybar {
 #workspaces button.active {
     border-radius: 10px 10px 10px 10px;
     border: 0px;
-    color: @backgroundcolor;
     min-width: 20px;
     transition: all 0.2s linear;
     opacity:1.0;
 }
 
-#workspaces button:hover {
+/* #workspaces button:hover {
+    background-color: @backgroundcolor;
     color: @textcolor;
-    background: @backgroundcolor;
     border-radius: 5px 5px 5px 5px;
     opacity: 1.0;
-}
+} */
 
 /* -----------------------------------------------------
  * Tooltips
@@ -92,15 +98,16 @@ tooltip label {
 
 #window {
     border-radius: 5px 5px 5px 5px;
+    background-color: @backgroundcolor;
     color: @textcolor;
     font-size:16px;
     font-weight:normal;
     opacity: 1.0;
-    
+
 }
 
 window#waybar.empty #window {
-    background-color:transparent;
+    background-color: transparent;
 }
 
 /* -----------------------------------------------------
@@ -109,6 +116,7 @@ window#waybar.empty #window {
 
 #taskbar {
     background: @backgroundcolor;
+    color: @iconcolor;
     border-radius: 5px 5px 5px 5px;
     font-weight: normal;
     font-style: normal;
@@ -122,6 +130,7 @@ window#waybar.empty #window {
 
 #taskbar.empty {
     background:transparent;
+    color: transparent;
     border:0;
 }
 
@@ -203,11 +212,10 @@ window#waybar.empty #window {
 }
 
 #custom-ml4w-welcome {
-    background-image: url("../assets/ml4w-icon.svg"), linear-gradient(to right, #6DB3F2, #6DB3F2);
+    background-image: url("../assets/ml4w-icon.svg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
-    /* background-color: @iconcolor; */
     padding: 0px 8px 0px 8px; 
     margin: 0px 0px 0px 0px;
 }
@@ -273,13 +281,13 @@ window#waybar.empty #window {
 #custom-updates {
     background-color: @backgroundcolor;
     font-size: 16px;
-    color: @textcolor;
+    color: @iconcolor;
     border-radius: 5px 5px 5px 5px;
     opacity: 1.0;
 }
 
 #custom-updates.green {
-    background-color: @textcolor;
+    color: greenyellow;
 }
 
 #custom-updates.yellow {
@@ -330,11 +338,9 @@ window#waybar.empty #window {
 
 #backlight {
     background-color: @backgroundcolor;
+    color: @iconcolor;
     font-size: 16px;
-    color: @textcolor;
     border-radius: 5px 5px 5px 5px;
-    /* padding: 2px 10px 0px 10px;
-    margin: 3px 15px 3px 0px; */
     margin: 0px 25px 0px 0px;
     opacity: 1.0;
 }
@@ -345,8 +351,8 @@ window#waybar.empty #window {
 
 #pulseaudio {
     background-color: @backgroundcolor;
+    color: @iconcolor;
     font-size: 16px;
-    color: @textcolor;
     border-radius: 5px 5px 5px 5px;
     padding: 0px 8px 0px 8px; 
     margin: 0px 0px 0px 0px;
@@ -355,7 +361,7 @@ window#waybar.empty #window {
 
 #pulseaudio.muted {
     background-color: @backgroundcolor;
-    color: @textcolor;
+    color: @iconcolor;
 }
 
 /* -----------------------------------------------------
@@ -365,7 +371,7 @@ window#waybar.empty #window {
 #network {
     background-color: @backgroundcolor;
     font-size: 16px;
-    color: @textcolor;
+    color: @iconcolor;
     border-radius: 5px 5px 5px 5px;
 	padding: 0px 8px 0px 8px; 
     margin: 0px 4px 0px 0px;
@@ -374,12 +380,12 @@ window#waybar.empty #window {
 
 #network.ethernet {
     background-color: @backgroundcolor;
-    color: @textcolor;
+    color: @iconcolor;
 }
 
 #network.wifi {
     background-color: @backgroundcolor;
-    color: @textcolor;
+    color: @iconcolor;
 }
 
 /* -----------------------------------------------------
@@ -388,8 +394,8 @@ window#waybar.empty #window {
 
 #bluetooth, #bluetooth.on, #bluetooth.connected {
     background-color: @backgroundcolor;
+    color: @iconcolor;
     font-size: 16px;
-    color: @textcolor;
     border-radius: 5px 5px 5px 5px;
     padding: 2px 10px 0px 10px;
     margin: 3px 15px 3px 0px;
@@ -408,8 +414,8 @@ window#waybar.empty #window {
 
 #battery {
     background-color: @backgroundcolor;
+    color: @iconcolor;
     font-size: 16px;
-    color: @textcolor;
     border-radius: 5px 5px 5px 5px;
     padding: 0px 8px 0px 8px; 
     margin: 0px 0px 0px 0px;
@@ -417,20 +423,20 @@ window#waybar.empty #window {
 }
 
 #battery.charging, #battery.plugged {
-    color: @textcolor;
     background-color: @backgroundcolor;
+    color: @iconcolor;
 }
 
 @keyframes blink {
     to {
         background-color: @backgroundcolor;
-        color: @textcolor;
+        color: @iconcolor;
     }
 }
 
 #battery.critical:not(.charging) {
     background-color: #f53c3c;
-    color: @textcolor;
+    color: @iconcolor;
     animation-name: blink;
     animation-duration: 0.5s;
     animation-timing-function: linear;
@@ -463,7 +469,7 @@ window#waybar.empty #window {
 }
 
 .custom-spotify {
-    padding: 0px 12px 0px 12px;
+    padding: 0px 20px 0px 20px;
     margin: 0px 0px 0px 0px;
     background-color: @spotifybackground;
     font-size: 16px;
