new colors like ubuntu mate theme

--- a/dotfiles/.config/waybar/themes/exotic-modern-simple/style.css
+++ b/dotfiles/.config/waybar/themes/exotic-modern-simple/style.css
@@ -20,7 +20,7 @@
 
 @define-color altbackgroundcolor @textcolor;
 @define-color altbordercolor @altbackgroundcolor;
-@define-color alttextcolor @waybarcolor;
+@define-color alttextcolor @backgroundcolor;
 @define-color alticoncolor @alttextcolor;
  
 
