--- a/dotfiles/.config/waybar/themes/exotic-modern-simple/ubuntu-mate/style.css
+++ b/dotfiles/.config/waybar/themes/exotic-modern-simple/ubuntu-mate/style.css
@@ -3,24 +3,24 @@
  * ----------------------------------------------------- */
 @import '../../../../../.cache/wal/colors-waybar.css';
 
-@define-color waybarcolor #87a556;
+@define-color waybarcolor #2C2C2C;
 
 @define-color backgroundcolor @waybarcolor;
 @define-color bordercolor @waybarcolor;
-@define-color textcolor #000000;
+@define-color textcolor #FFFFFF;
 @define-color iconcolor @textcolor;
 
 
-@define-color spotifybackground #000000;
+@define-color spotifybackground #87A556;
 @define-color spotifycolor @waybarcolor;
 
 
 @import '../style.css';
  
 #custom-ml4w-welcome {
-    background-image: url("../../assets/ml4w-icon-black.svg");
+    background-image: url("../../assets/ml4w-icon-mate.svg");
 }
 
 #custom-chatgpt {
-    background-image: url("../../assets/openai-black.svg");
+    background-image: url("../../assets/openai-mate.svg");
 }
