--- a/dotfiles/.config/waybar/themes/exotic-ubuntu/ubuntu-mate-dark/style.css
+++ b/dotfiles/.config/waybar/themes/exotic-ubuntu/ubuntu-mate-dark/style.css
@@ -3,24 +3,24 @@
  * ----------------------------------------------------- */
 @import '../../../../../.cache/wal/colors-waybar.css';
 
-@define-color waybarcolor #3C3B37;
+@define-color waybarcolor #000000;
 
 @define-color backgroundcolor @waybarcolor;
 @define-color bordercolor @waybarcolor;
-@define-color textcolor #87a556;
+@define-color textcolor #ECECED;
 @define-color iconcolor @textcolor;
 
 
-@define-color spotifybackground @textcolor;
+@define-color spotifybackground #87A556;
 @define-color spotifycolor @waybarcolor;
 
 
 @import '../style.css';
  
 #custom-ml4w-welcome {
-    background-image: url("../../assets/ml4w-icon-mate.svg");
+    background-image: url("../../assets/ml4w-icon-mate-light-grey.svg");
 }
 
 #custom-chatgpt {
-    background-image: url("../../assets/openai-mate.svg");
+    background-image: url("../../assets/openai-mate-light-grey.svg");
 }
